# mcp_ocr_cc

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SETUP.md  pyproject.toml  requirements.txt  run_mcp.cmd
.claude/: settings.json
src/ocr_tool/: __init__.py  __main__.py  capture.py  cli.py  formatters.py  layout.py  mcp_server.py  ocr.py  pipeline.py  preprocess.py
tests/: conftest.py  test_formatters.py  test_layout.py  test_preprocess.py
